Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-19785

Storage CONNECT compilation error: unknown type name 'UNZFAM'

    XMLWordPrintable

Details

    Description

      FAILED: storage/connect/CMakeFiles/connect.dir/tabfmt.cpp.o
      ccache /usr/bin/clang++-7  -DFORCE_INIT_OF_VARS -DGZ_SUPPORT -DHAVE_CONFIG_H -DHUGE_SUPPORT -DLINUX -DMARIADB -DMYSQL_DYNAMIC_PLUGIN -DUBUNTU -DUNIX -D_FILE_OFFSET_BITS=64 -Dconnect_EXPORTS -Iinclude -I/home/midenok/src/mariadb/trunk/src/include -I/home/midenok/src/mariadb/trunk/src/sql -fPIC -Wall -Wmissing-declarations -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-value -Wno-error=parentheses -Wno-error=strict-aliasing -Wno-error=implicit-fallthrough -Wno-error=type-limits -fpermissive -fexceptions -fPIC  -g -O0 -Werror=overloaded-virtual -Werror=return-type -Wno-deprecated-register -Wno-deprecated-declarations -Wno-unused-function -Wno-deprecated-register -fdebug-macro -DENABLED_DEBUG_SYNC -ggdb3 -DSAFE_MUTEX -DTRASH_FREED_MEMORY -Wno-unused-function -Wno-unused-variable -Wno-unused-value -Wno-parentheses -Wno-strict-aliasing -Wno-implicit-fallthrough -Wno-type-limits -fPIC   -std=gnu++11 -MD -MT storage/connect/CMakeFiles/connect.dir/tabfmt.cpp.o -MF storage/connect/CMakeFiles/connect.dir/tabfmt.cpp.o.d -o storage/connect/CMakeFiles/connect.dir/tabfmt.cpp.o -c /home/midenok/src/mariadb/trunk/src/storage/connect/tabfmt.cpp
      /home/midenok/src/mariadb/trunk/src/storage/connect/tabfmt.cpp:193:34: error: unknown type name 'UNZFAM'
                      tcvp = new(g)TDBCSV(tdp, new(g)UNZFAM(tdp));
                                                     ^
      

      Fix

      --- a/storage/connect/tabfmt.cpp
      +++ b/storage/connect/tabfmt.cpp
      @@ -189,9 +189,11 @@ PQRYRES CSVColumns(PGLOBAL g, PCSZ dp, PTOS topt, bool info)
                      htrc("File %s Sep=%c Qot=%c Header=%d maxerr=%d\n",
                      SVP(tdp->Fn), tdp->Sep, tdp->Qot, tdp->Header, tdp->Maxerr);
       
      +#if defined(ZIP_SUPPORT)
              if (tdp->Zipped)
                      tcvp = new(g)TDBCSV(tdp, new(g)UNZFAM(tdp));
              else
      +#endif
                      tcvp = new(g) TDBCSV(tdp, new(g) DOSFAM(tdp));
       
              tcvp->SetMode(MODE_READ);
      

      Attachments

        Activity

          People

            midenok Aleksey Midenkov
            midenok Aleksey Midenkov
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 55m
                55m

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.