MDEV-19785 Storage CONNECT compilation error: unknown type name 'UNZFAM'

Another fail fix:

undefined reference to `ZipLoadFile`