storage/connect/ha_connect.cc
@@ -6678,6 +6678,7 @@ int ha_connect::create(const char *name, TABLE *table_arg,
   if (trace(1))
     htrc("xchk=%p createas=%d\n", g->Xchk, g->Createas);
 
+#if defined(ZIP_SUPPORT)
 	if (options->zipped) {
 		// Check whether the zip entry must be made from a file
 		PCSZ fn = GetListOption(g, "Load", options->oplist, NULL);
@@ -6707,6 +6708,7 @@ int ha_connect::create(const char *name, TABLE *table_arg,
 		}	// endif fn
 
 	}	// endif zipped
+#endif // ZIP_SUPPORT
 
   // To check whether indexes have to be made or remade
   if (!g->Xchk) {
